--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,10 @@ header {
   width: 500px;
 }
 
+h2 {
+  color: #06365f;
+}
+
 article p {
   line-height: 1.5;
 }
@@ -84,7 +88,13 @@ footer ul {
 footer ul a {
   text-decoration: none;
   margin: 10px;
+  color: #1c5380;
+  font-weight: 900;
 }
 
+.copyright {
+  color: gray;
+  font-weight: 400;
+}
 
 
