--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,124 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+  background: linear-gradient(to bottom, #1c5380 0%, #1c5380 30%, #06365f 40%, white 40%, white 100%);
+
 */
+*{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  text-decoration: none;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 40px;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
 }
+
+.main-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-box img {
+  height: fit-content;
+}
+
+.box-2 {
+  background-color: none;
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  padding: 20px;
+  width: 500px;
+
+}
+
+.caja-texto {
+  padding-left: 20px;
+  padding-top: 20px;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  margin-top: 5px;
+}
+
+
+.caja-texto h1, p {
+  margin: 20px;
+  padding-right: 20px;
+}
+
+.caja-texto h1{
+  color: #06365f ;
+  font-size: 30px;
+  line-height: 40px;
+}
+
+.box-3 {
+  background-color: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+}
+
+.log-in {
+  display: block;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 1%;
+  box-shadow: 0px 0px 2px 2px #06365f;
+  width: 80px;
+  padding: 5px 15px;  
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  
+}
+
+.log-in a{
+  color: rgb(189, 189, 189);
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+
+
+.log-in a img{
+  padding-top: 5px;
+}
+
+
+
+
+.box-4 {
+  background-color: none;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 100px;
+  padding-left: 30px;
+  margin-bottom: 10px;
+
+}
+
+.box-5 { 
+  background-color: none;
+  display: flex;
+  text-transform: uppercase;
+  justify-content: space-between;
+  padding: 0 300px;
+}
+
+.box-5 a {
+  color: #1c5380 ;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.box-5 h6 {
+  color: rgba(0, 0, 0, .5)
+}
+
