--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,78 @@
 /*
 Colors to use:
-dark blue: #06365f
+dark blue: 
 light blue: #1c5380
 */
-
+* {
+  margin: 0xp;
+  padding: 0xp;
+}
 body {
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 150px;
+}
+
+.flex-container {
+  display: flex;
+  width: 90%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  background-color: #1c5380;
+  padding: 5px 10px;
+  box-shadow: 2px 2px 10px 0 #06365f;
+  border-radius: 3%;
+}
+.header a img {
+  margin: 5px;
+}
+section {
+  margin: 15px;
+}
+.section-2 {
+  width: 80%;
+}
+
+.text {
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 30px;
+  border-radius: 1%;
+}
+.text h1 {
+  color: #06365f;
+  margin-top: 0%;
+}
+
+.footer {
+  justify-content: center;
+  align-items: center;
+}
+.footer li {
+  margin: 10px;
+  list-style: none;
+  font-weight: bold;
+}
+
+.footer a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+.gris a {
+  color: gray;
 }
