--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,141 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+*{margin: 0;
+padding: 0;}
+
+.main{
+padding: 100px;
+background-image: url("../images/bgtile.png");
+background-repeat: repeat-x;
+
+}
+
+.content{
+
+  display:flex;
+  
+  justify-content: center;
+}
+
+
+.content-left{
+margin-right: 100px;
+}
+
+.content-right{
+
+  width: 500px;
+}
+
+.content-right p{
+margin: 10px 0;
+
+}
+
+.content-right h1{
+
+color:#1c5380;
+}
+
+.texts{
+
+  padding: 20px;
+
+
+}
+
+.brand{
+
+  display:flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.brand img{
+
+  width: 60%;
+  height: 60%;
+  
+
+}
+
+.brand .home{
+width: 20px;
+position:relative;
+top:4px;
+
+
+}
+
+
+.brand a{
+
+display:block;
+text-decoration: none;
+color:white;
+border:0px solid white;
+width: 80px;
+height:30px;
+padding-top:5px;
+padding-right: 15px;
+text-align: right;
+border-radius: 3px;
+
+margin-top: 10px;
+
+background: linear-gradient(to bottom,#186ab3, #1f84d6);
+
+
+}
+
+.texts{
+
+background-color: white;
+border-radius: 5px;
+
+
+
+}
+
+.buttons{
+
+margin-top: 50px;
+}
+
+.android{
+
+margin-left: 20px;
+
+}
+
+
+.navegador {
+margin-bottom: 50px;
+
+}
+
+nav ul{
+
+  display:flex;
+list-style: none;
+justify-content: center;
+}
+
+nav ul li{
+  display:block;
+  margin: 0 10px;
+  text-transform: uppercase;
+}
+
+
+nav ul li a{
+
+text-decoration: none;
+
+
+color:#1c5380 ;
+font-weight: bold;
+
+}
