--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,142 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.bigBox {
+  display: flex;
+  justify-content: space-between;
+  border: 10px;
+  margin:50px;
+}
+
+.bigBox > div{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+
+.leftBox {
+  display: flex;
+  border: 10px;
+}
+
+.rightBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 10px;
+}
+
+.rightBoxUpper {
+  display: flex;
+  margin-top: 30px;
+  padding-right: 65px;
+  padding-left: 20px;
+  justify-content: space-between;
+  border: 10px;
+  align-items: center;
+}
+
+.rightBoxBottom {
+  
+  display: flex;
+  padding: 20px;
+  padding-right:30px;
+}
+
+article{
+  background: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.logInButton {
+  text-decoration: none;
+  border: 1px solid #163e5f;
+  font-family: sans-serif;
+  background-color: #1c5380;
+  color: white;
+  width: 120px;
+  text-align: center;
+  padding-top: 8px;
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-bottom: 8px;
+  border-radius: 3px;
+  font-weight: bold;
+  background-image: linear-gradient(#38688f, #1c5380);
+}
+
+.logInButtonInside {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+}
+
+.footerList{
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  
+
+}
+
+.footerList > li{
+  margin-left: 8px;
+  margin-right:8px;
+  
+
+}
+
+.footerList > li > a{
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+.footerList > li > a{
+  color: #1c5380;
+}
+
+.rightBoxBottom > article > h2{
+  margin: 30px;
+  margin-top:30px;
+  color: #1c5380;
+  
+}
+
+.rightBoxBottom > article > p{
+  margin: 30px;
+}
+
+.rightBoxBottomImages {
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.rightBoxBottomImages > img{
+  margin-right: 16px;
+}
+
+.backgroundImage{
+    position:absolute;
+    width:100%;
+    height:35%;
+    left:0px;
+    top:0px;
+    z-index:-1;
 }
