--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,118 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+
+.flex-container {
+  display: flex;
+}
+
+h1 {
+  text-align: left;
+  color: #06365f;
+  margin: 28px;
+  margin-top: 20px;
+  padding-top: 30px;
+  }
+
+p {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
+} 
+
+section {
+  align-self: flex-start;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.logoboton {
+  margin-right: 90px;
+  margin-left: 90px;
+  align-items: center;
+  justify-content: space-between;
+  width: 500px;
+}
+
+.caja {
+  margin-left: 90px;
+  margin-top: 10px;
+  width: 500px;
+  margin-bottom: 50px;
+}
+
+.pie {
+  color: #06365f;
+  font-weight: bold;
+  display: center;
+}
+
+.botones ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+}
+
+.botones li {
+  margin-left:20px;
+  margin-right:20px;
+  justify-items: center;
+  font-weight: bold;
+  color:#06365f;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+.box {
+  margin: 100px;
+}
+
+.caja {
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.photo {
+  margin-top: 10px;
+  margin-bottom: 100px;
+  margin-left: 30px;
+}
+
+.botones li:last-child(){
+  color: grey;
+}
+
+a.button {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1c5380;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding: 6px 12px;
+  border-radius: 2px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #06365f;
+  width: 80px;
+}
+
+.insta {
+  color: grey;
 }
