--- a/styles/style.css
+++ b/styles/style.css
@@ -17,22 +17,26 @@ body {
 section{
   display: flex;
   justify-content: space-between;
-  margin: 100px;
+  margin-right: 100px;
+  margin-bottom: 80px;
+  margin-left: 100px;
 }
 
 .left {
   display: flex;
   justify-content: center;
-  width: 40%;
-  margin-right: 100px;
+  margin-right: 50px;
+  margin-top: 100px;
   
 }
 
 
-.rigth {
+.right {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin-left: 50px;
+  margin-top: 100px;
 }
 
 .cabeza{
@@ -49,9 +53,7 @@ h1 {
 }
 
 p {
-  display: flex;
-  margin: 25px;
-  width: 400px;
+  margin: 10px;
 }
 
 .imagenes{
@@ -81,6 +83,7 @@ li {
 button {
   padding: 15px;
   height:fit-content;
+  background-color: #1c5380;
   
 }
 
@@ -90,6 +93,17 @@ button {
   justify-content: center;
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
-  background-size: 420px 200px;
-  
+  text-align: left;
+  margin-right: 150px;
+}
+
+.fondo{
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+  position: absolute;
+}
+
+footer {
+  margin-bottom: 50px;
 }
