--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/lab-css-instagram-clone/images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+}
+ .white-box {
+   background-image: url("../images/frame.png");
+   background-repeat: no-repeat;
+   width: 70%;
+ }
+
+.flex-container {
+  margin: 0px 100px 0px 100px;
+  display: flex;
+}
+.iphone {
+  margin: 200px 50px 0px 100px; 
+}
+
+.section {
+  margin: 200px 200px 0px 200px;
+  padding-bottom: 0px;
+}
+
+.instagram-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  padding: 10px 10px 0px 10px;
+  text-decoration: none;
+  border: 1px solid #06365f;
+  background-color: #06365f;
+  text-align: center;
+}
+
+h1 {
+  font-size: 40px;
+  color: #06365f;
+}
+
+p {
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+
+.download {
+  padding: 0px;
+  display: flex;
+}
+
+
+.footer ul{
+  padding: 200px;
+  margin-top: 0px;
+  margin-left: 100;
+  margin-right: 100;
+  display:flex;
+  justify-content: space-evenly;
+  list-style: none;
+  color:#1c5380;
+  font-weight: bold;
+}
+
+.insta {
+  font-weight: bold;
+  color: grey;  
+}
+
