--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,116 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin:0;
+  padding:0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+section {
+  display: flex;
+  justify-content: space-between;
+ 
+  
+}
+
+header {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 6px;
+ 
+  margin-right: 200px;
+
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  margin-top: 40px;
+}
+
+.instagram{
+
+}
+
+.home {
+width: 30px;
+height: 30px;
+}
+
+.cellphone {
+margin: 100px;
+}
+
+.text {
+margin: 100px;
+}
+
+.title{
+  font-weight: bold;
+  color: #06365f;
+  font-size: 30px;
+  
+}
+article {
+  padding-bottom: 50px;
+  padding-right: 350px;
+}
+
+footer{
+padding: 10px;  
+margin-bottom: 80px;
+}
+.nav-bar {
+list-style: none;
+text-transform: uppercase;
+font-size: 12px;
+font-weight: bold;
+display: flex;
+justify-content: center;
+}
+
+.nav-bar a{
+  text-decoration: none;
+  color: #1c5380 ;
+}
+.nav-bar li{
+padding: 0 5px;
+
+}
+
+.copyright {
+  color: lightgrey;
+}
+
+.button {
+  text-decoration: none;
+  color:white;
+  border: 1px solid black;
+  background-color:#1c5380;
+  padding: 10px;
+  display: block;
+  width: 100px;
+  text-align: center;
+
+  ;
+
+}
+
+.background {
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+  position: absolute;
+}
+
+article {
+background-image: url(../images/frame.png);
+background-repeat: no-repeat;
 }
