--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,86 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
 }
+
+.image{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 40%;
+}
+
+.container-phone{
+  display: flex;
+  justify-content: center;
+  padding-top: 200px;
+
+  
+}
+.logo{ 
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container-text{
+  margin-left: 50px;
+}
+
+.login{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  padding-left: 30px;
+  border: 1px solid #06365f;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color:#1c5380;
+
+  height: 50px;
+}
+.login a{
+
+  text-decoration: none;
+  color: white;
+}
+.text{
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  flex-direction: column;
+  background-image: url(/images/frame.png);
+  padding: 50px;
+  background-repeat: no-repeat;
+}
+.images{
+  padding-left: 55px;
+}
+
+
+.list-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.list-link li{
+  padding: 5px;
+}
+.list-link li a{
+text-decoration: none;
+color: #1c5380;
+}
+
