--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,97 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  padding: 0px;
+  margin: 0px;
+}
 body {
+  background-image: url("/images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.blackground{
+  height: 250px;
+  background-color: #1c5380;
+}
+.flexbox-header{
+  display: flex;
+  justify-content: center;
+}
+.width-phones{
+  margin-top: 80px;
+  margin-bottom: 35px;
+  margin-left: 35px ;
+  margin-right: 70px;
+  width: 100px;
+}
+.width-sections{
+  padding: 50px;
+  margin-top: 40px;
+  margin-left: 160px ;
+  margin-right: 35px;
+  width: 500px;
+}
+.head_instagram{
+  margin-bottom: 20px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bottom-log{
+  display: block;
+  width: 100px;
+  padding: 10px 10px;
+  margin: 2px;
+  background: linear-gradient(to bottom,  #2877b8,#1c5380 );
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: white
+}
+.instagram-logo{
+  display: block;
+  width: 300px;
+  height: 80px ;
+}
+h1{
+  color: #06365f;
+  margin-bottom: 10px;
+  margin-right: 170px;
+  font-size: 1.6em;
+  text-align: left;
+}
+.text{
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 10px;
+  padding: 35px;
+}
+.text div{
+  margin-top: 20px;
+display: flex;
+justify-content: space-between;
+}
+footer {
+  margin-left: 400px;
+  margin-right: 400px;
+}
+footer ul {
+  text-decoration: none;
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+footer ul li a {
+  text-decoration: none;
+  color:#1c5380;
+  font-weight: bold;
+}
+.final-footer{
+  color: #797b7e;
+  margin-left:50px ;
+}
+
