--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 *{
   padding: 0;
   margin: 0;
-  border: 1px solid red;
+  border: 1px solid rgb(255, 5, 5);
 }
 
 .flex-conteiner{
@@ -21,7 +21,7 @@ body {
 }
 
 .titulo{
-  margin-bottom: 15px;
+  margin-bottom: 35px;
 }
 
 .box-two{
@@ -33,3 +33,73 @@ margin: 30px;
   margin-top: 45px;
 }
 
+.navbar ul{
+display: flex;
+justify-content: space-evenly;
+width: 40%;
+height: 60px;
+align-items: center;
+margin right: 150px;
+list-style: none;
+margin-left: 400px;
+font-size: 12px;
+color: rgb(73, 73, 149);
+text-transform: uppercase;
+}
+
+.copyright{
+  font-size: 8px;
+  color: grey;
+}
+
+.prime{
+  margin-top: 150px;
+}
+
+.boton{
+  display: flex;
+  justify-items: left;
+  justify-content: center;
+  width: 80px;
+}
+
+.pillos{
+  display: flex;
+  justify-content: space-between; 
+}
+
+.boton{
+  background-color: rgb(73, 73, 149);
+  color: white;
+  align-self: center;
+  padding: 10px;
+  padding-left: 10px;
+  text-transform: capitalize;
+  text-decoration: none;
+  box-shadow: inset;
+}
+
+.casita{
+  margin-right: 5px;
+}
+
+.paraframe{
+background-image: url(/lab-css-instagram-clone/images/frame.png);
+padding-top: 20px;
+padding-left: 15px;
+}
+
+.background{
+  background-color: rgb(83, 83, 141);
+}
+
+body{
+  background-color: rgb(244, 242, 239);
+}
+
+.fondo-azul{
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  z-index: -1;
+}
