--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,87 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 100px;
+  height: 100vh;
+  background: linear-gradient(
+    to bottom,
+    #1c5380 0%,
+    #1c5380 40%,
+    white 40%,
+    white 100%
+  )
+}
+
+.container {
+  display: flex;
+}
+
+.smartphone {
+  margin: 30px;
+}
+
+.content {
+  margin: 30px 100px 30px 30px;
+}
+
+header {
+  box-sizing: border-box;
+  height: 20%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  height: 40px;
+  width: 100px;
+  border: 0.1px solid #06365f;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #1c5380;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.details {
+  box-sizing: border-box;
+  height: 80%;
+  background-color: white;
+  padding: 5px 30px 0 30px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid black
+}
+
+.details h2 {
+  color: #06365f;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+footer {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+}
+
+footer a {
+  text-transform: uppercase;
+  margin: 0 10px;
+  text-decoration: none;
+  color: #06365f;
+}
+
+footer p {
+  color: grey;
 }
