--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,101 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  background-image: linear-gradient(#4394d6 -40%, #1c5380 42%, #fff 42%);
+}
+
+.main-section {
+  display: flex;
+  justify-content: center;
+  margin: 80px 80px 0 80px;
+}
+
+.container-left {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+}
+
+.container-right {
+  flex: 3;
+}
+
+.container-right-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 8px;
+}
+
+.login {
+  background-image: linear-gradient(#297abc, #1c5380 80%);
+  padding: 10px 18px;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  box-shadow: 2px 2px 5px #123654;
+}
+
+.login img {
+  margin-right: 10px;
+}
+
+.login a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.9rem;
+}
+
+.container-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.container-right-main {
+  font-size: 0.9rem;
+  background-image: url('../images/frame.png');
+  background-size: cover;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 1.5rem;
+}
+
+.container-right-main {
+  padding: 20px 60px;
+}
+
+.container-right-bottom {
+  padding: 10px 0 0 60px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.container-right-bottom img {
+  padding: 0 20px 0 0;
+  height: 48px;
+}
+
+footer {  
+  margin: 80px 80px 20px 80px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+footer a {
+  color: #1c5380;
+  text-decoration: none;
+  margin: 0 8px;
+}
+
+footer span {
+  color: #aaa;
+  margin: 0 8px;
 }
