--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,77 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+  /* background: linear-gradient(180deg, #456789 30%, white 50%); */
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  /* background-repeat: no-repeat; */
+}
+
+header {
+  background-color: #456789;
+  height: 400px;
+}
+.both {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* height: 1200px; */
+}
+
+.phoneimg {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+}
+.phone {
+  height: 700px;
+}
+.rightside {
+  height: 500px;
+}
+.home {
+  height: 20px;
+  width: 30px;
+}
+.cardimgs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.login {
+  display: flex;
+
+  align-items: center;
+}
+.login p {
+  text-align: center;
+}
+
+.card {
+  background-image: url('../images/frame.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 700px;
+  height: 500px;
+  padding: 10px;
+  margin-top: 10px;
+}
+.buttons {
+  background: black;
+  color: white;
+  border-radius: 5px;
+  height: 50px;
+  width: 140px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
+nav li {
+  list-style-type: none;
+  padding: 15px;
 }
