--- a/styles/style.css
+++ b/styles/style.css
@@ -45,14 +45,21 @@ header {
 }
 .login {
   display: flex;
-
+  background-color: #456789;
+  justify-content: space-between;
+  width: 80px;
+  height: 40px;
+  padding-right: 30px;
   align-items: center;
+  border-radius: 3px;
 }
 .login p {
   text-align: center;
+  font-size: 14px;
+  color: white;
 }
 
-.card {
+article.card {
   background-image: url('../images/frame.png');
   background-position: center;
   background-size: cover;
@@ -61,6 +68,16 @@ header {
   height: 500px;
   padding: 10px;
   margin-top: 10px;
+}
+h2 {
+  width: 310px;
+  font-size: 30px;
+}
+.card p {
+  width: 430px;
+}
+.text {
+  font-weight: bold;
 }
 .buttons {
   background: black;
