--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,134 @@ light blue: #1c5380
 */
 
 body {
+  --dark-blue: #06365f;
+  --light-blue: #1c5380;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  height: 100vh;
+}
+#main{
+  width: 100%;
+  height: 100%;
+  background: #06365f;
+  background: linear-gradient(180deg, #06365f 0%, #06365f 50%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%);
+}
+.big-flex{
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+.image-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: flex-end;
+  align-items: center;
+  width: 40%;
+}
+
+.phone-image{
+  height: 80%;
+  padding-right: 5%;
+}
+.right-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 60%;
+}
+.header-right-section{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: center;  
+
+  padding-bottom: 2%;
+}
+.header-right-section img{
+  width: 50%;
+}
+.login-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;  
+  background-color: var(--light-blue);
+  border-radius: 5px;
+  height: 50%;
+  padding: 0% 2%;
+}
+.login-btn img{
+  width: auto;
+  height: 50%;
+}
+.login-btn p{
+  padding-left: 15px;
+  font-size: 20px;
+  color: white;
+}
+.text-right-section{
+  width: 80%;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  padding: 0.5% 4%;
+}
+.text-right-section h2{
+  color: var(--dark-blue);
+  font-size: 40px;
+  width: 55%;
+}
+.text-right-section p{
+  font-size: 20px;
+  width: 95%;
+  margin: 1% 0%;
+}
+.flex-footer{
+  height: 10%;
+  
+}
+.images{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: center;
+  padding-top: 2%;
+}
+.images img{
+  padding-right: 5%;
+  width: 30%;
+}
+.flex-footer ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  list-style: none;
+}
+.flex-footer ul li{
+  font-size: 15px;
+  font-weight: 600;
+  padding-right: 1%;
+  text-transform:uppercase;
+}
+.color-blue{
+  color: var(--dark-blue);
+}
+.color-gray{
+  color: rgb(177, 177, 177);
+  
 }
