--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,89 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+#background {
+  position: relative;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+}
+.content {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: stretch;
+}
+
+#main-section {
+  width: 50vw;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+  align-content: stretch;
+}
+
+#log-in-button {
+  background-color: #1c5380;
+  color: white;
+  padding: 10px;
+  border-radius: 10%;
+}
+#bottom {
+  background-color: white;
+  border-radius: 15%;
+  padding: 5%;
+}
+#bottom h1 {
+  color: #1c5380;
+  box-shadow: 2px;
+}
+#text-area {
+  padding: 5%;
+}
+
+footer {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: baseline;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+#copyright {
+  color: grey;
+  font-weight: lighter;
+}
+#top {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: stretch;
 }
