--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,132 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-image: url("/images/bgtile.png");
+  background-repeat: repeat-x;
+}
+main {
+  display: flex;
+  justify-content: center;
+  width: 10vw;
+  gap: 5vw;
+  margin-top: 12vh;
+}
+main > img {
+  width: 30vw;
+  height: 100%;
+}
+main > div {
+  /*   width: 70vw;
+  height: auto; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.header-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+}
+/* .header-info > img:first-child {
+  width: 60%;
+} */
+.header-info a {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  gap: 1vw;
+  padding: 0.7vw;
+  color: #ffffff;
+  background: linear-gradient(
+    135deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(6, 54, 95, 1) 100%
+  );
+  border-radius: 2px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.device-images {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2vw;
+  margin-top: 5vh;
+}
+.main-info {
+  border-radius: 5px;
+  background-color: #ffffff;
+  padding: 1vw 2vw;
+  margin-top: 3vh;
+  position: relative;
+  width: 40vw;
+}
+.main-info:after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  height: 50%;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 1vw 2vw;
+  top: 0;
+}
+.main-info h1 {
+  color: #06365f;
+  font-size: 1.6em;
+  width: 25vw;
+}
+article p {
+  font-size: 0.9em;
+}
+footer {
+  margin: 7vh 0;
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5vw;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+footer ul {
+  list-style-type: none;
+  display: flex;
+  gap: 1.5vw;
+}
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 0.8em;
+}
+footer span {
+  color: lightgrey;
+  font-size: 0.7em;
+}
+@media screen and (max-width: 1080px) {
+  main {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  main > div {
+    align-items: center;
+  }
+  .header-info a {
+    display: none;
+  }
+  .device-images {
+    justify-content: center;
+  }
+  /*   main {
+    width: 40vw;
+  } */
+  /*   main > img {
+    align-self: center;
+  } */
 }
